<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.SecondActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            tools:layout_editor_absoluteX="16dp">


            <ImageButton
                android:id="@+id/imageButtonSalir"
                android:layout_width="41dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:src="@drawable/icono_salir"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/tvFiltro"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonSalir" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="450dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:layout_marginBottom="41dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar2">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/fechaAdmision"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/tvfechaAdmision"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/linearFechaIni"
                        android:layout_width="215dp"
                        android:layout_height="79dp"
                        android:layout_below="@+id/fechaAdmision"
                        android:layout_marginTop="23dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:text="@string/desde"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/fechaInicial"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:backgroundTint="@color/gris"
                            android:text="@string/fecha" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearFechaFin"
                        android:layout_width="215dp"
                        android:layout_height="79dp"
                        android:layout_below="@+id/fechaAdmision"
                        android:layout_marginTop="23dp"
                        android:layout_toEndOf="@+id/linearFechaIni"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hasta"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/fechaFin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/gris"
                            android:text="@string/fecha" />
                    </LinearLayout>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="182dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="163dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/importe"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textView10"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="22dp"
                        android:layout_marginEnd="300dp"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView10"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="0€" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/slider2"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="22dp"
                        android:layout_marginEnd="22dp"
                        android:layout_marginBottom="10dp"
                        app:haloColor="#8BC34A"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView10"
                        app:thumbColor="@color/green"
                        app:thumbStrokeColor="@color/green"
                        app:tickColor="@color/green"
                        app:tickColorActive="@color/green"
                        app:tickColorInactive="@color/green"
                        app:trackColorActive="@color/green"
                        app:trackColorInactive="@color/green" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="16dp"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/slider2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView9"
                        app:layout_constraintTop_toBottomOf="@+id/textView8"
                        tools:text="300€" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toTopOf="@+id/checkBox3"
                    app:layout_constraintTop_toTopOf="@+id/checkBox3">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="14dp"
                        android:text="@string/pagadas"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/anuladas"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/checkBox3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/cuotafija"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/checkBox5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="217dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/pendientesPago"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/checkBox5"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

                    <CheckBox
                        android:id="@+id/checkBox5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/planDePago"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="19dp"
                        android:text="@string/estado"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/checkBox"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/green"
        android:text="@string/aplicarFiltro"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/borrarFiltros"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>